agregacion en la funcionalidad del panel descubrir musica